--- a/css/style.concat.css
+++ b/css/style.concat.css
@@ -1110,6 +1110,11 @@ body {
     @media only screen and (max-width: 75em) {
       .popup__content {
         width: auto; } }
+  .popup__header {
+    padding-top: 2rem; }
+    @media only screen and (max-width: 56.25em) {
+      .popup__header {
+        display: none; } }
   .popup__left {
     width: 33.3333%;
     display: table-cell; }
@@ -1142,8 +1147,8 @@ body {
         column-gap: 1rem; } }
   .popup__close {
     position: absolute;
-    right: 2.5rem;
-    top: 2.5rem;
+    right: 0.6rem;
+    top: -1.5rem;
     font-size: 3rem;
     text-decoration: none;
     color: #000;
